force-app/main/default/objects/Invoice__c/fields/QuickBooks_Domain__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Domain__c</fullName>
    <label>QuickBooks Domain</label>
    <length>10</length>
    <type>Text</type>
</CustomField>