force-app/main/default/objects/Invoice__c/fields/Quickbooks_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Invoice_Id__c</fullName>
    <label>Quickbooks Invoice Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>