force-app/main/default/objects/Invoice__c/fields/QuoteID__c.field-meta.xml
<CustomField>
    <fullName>QuoteID__c</fullName>
    <label>QuoteID</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>