force-app/main/default/objects/Invoice__c/validationRules/invoice_status.validationRule-meta.xml
<ValidationRule>
    <fullName>invoice_status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( PRIORVALUE ( Status__c), &quot;Paid&quot;),
NOT(ISPICKVAL(Status__c, &apos;Paid&apos;))
)
||
AND(
ISPICKVAL( PRIORVALUE ( Status__c), &quot;Not paid&quot;),
NOT(ISPICKVAL(Status__c, &apos;Paid&apos;) || ISPICKVAL(Status__c, &apos;Not Paid&apos;))
)</errorConditionFormula>
    <errorMessage>You can not change the status</errorMessage>
</ValidationRule>